# sphinxcontrib-ou-av

./: .buildinfo  .gitignore  LICENSE  README.md  generating_ouxml.html  genindex.html  index.html  objects.inv  ou_activities.html  ou_audio.html  ou_codestyle.html  ou_html5.html  ou_mol3d.html  ou_video.html  pdb_1ubq_generated.html  pyproject.toml  search.html  searchindex.js  video.py
.github/workflows/: deploy_docs.yml
_sources/: index.md  ou_activities.md  ou_audio.md  ou_codestyle.md  ou_html5.md  ou_video.md
_static/: ou_activities.css  ou_activities.js
docs/: _config.yml  _toc.yml  generating_ouxml.md  index.md  ou_audio.md  ou_codestyle.md  ou_html5.md  ou_mol3d.md  ou_video.md
ouxml/: index.xml
sphinxcontrib/: activities.py  audio.py  codestyle.py  html5.py  mol3d.py  ou-activities.py  ou-audio.py  ou-codestyle.py  ou-html5.py  ou-mol3d.py  ou-video.py  video.py
sphinxcontrib_ou_media/: utils.py
sphinxcontrib_ou_media/assets/html-zip-resources/templates/: ou-code-index.html  ou-thebe-lite-index.html
sphinxcontrib_ou_media/static/css/: ou_activities.css
sphinxcontrib_ou_media/static/js/: ou_activities.js  ou_codestyle.js
