[build-system]
requires = ["setuptools>=61.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sphinxcontrib-ou-media"
version = "0.0.2"
description = "Allows embedding of media elements in sphinx in OU production workflows."
authors = [
    {name = "Tony Hirst", email = "tony.hirst@gmail.com"},
]
requires-python = ">=3.7.0"
dependencies = ["sphinx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Documentation",
    "Topic :: Utilities",
]

[project.license]
text = "Apache Software License"

[project.urls]
repository = "https://github.com/innovationOUtside/sphinxcontrib-ou-av"

[tool.setuptools]
include-package-data = false
license-files = ["LICENSE"]
packages = ["sphinxcontrib"]
